k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laura-db
  labels:
    name: laura-db
    app: laura-db
